--- a/game/tf/addons/sourcemod/translations/minecraft.phrases.txt
+++ b/game/tf/addons/sourcemod/translations/minecraft.phrases.txt
@@ -72,6 +72,11 @@
 		"en"	"Use [Reload] To Bring Up The Block Menu"
 	}
 
+	"MC_UseBuildMode"
+	{
+		"en"	"{green}[Minecraft]{default} Consider using !mc_buildmode instead of !build and !break. This message will only display once."
+	}
+
 	// Admin commands.
 
 	"MC_ClearedAll"
