Add command for non-staff players to clear their own blocks

--- a/game/tf/addons/sourcemod/translations/minecraft.phrases.txt
+++ b/game/tf/addons/sourcemod/translations/minecraft.phrases.txt
@@ -77,6 +77,11 @@
 		"en"	"{green}[Minecraft]{default} Consider using !mc_buildmode instead of !build and !break. This message will only display once."
 	}
 
+	"MC_ClearedOwnBlocks"
+	{
+		"en"	"{green}[Minecraft]{default} All of your blocks have been removed from the map."
+	}
+
 	// Admin commands.
 
 	"MC_ClearedAll"
