Update models and config

--- a/game/tf/addons/sourcemod/translations/minecraft_blocks.phrases.txt
+++ b/game/tf/addons/sourcemod/translations/minecraft_blocks.phrases.txt
@@ -94,6 +94,11 @@
 		"en"		"Glass"
 	}
 
+	"MC_Block_Glass"
+	{
+		"en"		"Glass"
+	}
+
 	"MC_Block_BlackStainedGlass"
 	{
 		"en"		"Black Stained Glass"
